# cereal-killer

./: .env.example  .gitignore  BACKEND_ANALYSIS.md  Dockerfile  HACKTRICKS_INTEGRATION.md  Makefile  PROJECT_ANALYSIS.md  README.md  docker-compose.yml  implementation_plan.md  pyproject.toml
config/searxng/: settings.yml
data/sessions/: zero-cool-session-20260419-203233.json  zero-cool-session-20260419-203236.json  zero-cool-session-20260419-203300.json  zero-cool-session-20260419-203303.json  zero-cool-session-20260419-203715.json  zero-cool-session-20260419-203718.json
docs/architecture/: brain_architecture.md  cereal_killer_app.md  observer_pattern.md  rag_pipeline.md
docs/setup/: README.md  TROUBLESHOOTING.md
screenshots/: .gitkeep
scripts/: sync_ippsec.py
scripts/setup/: check_env.py  generate_config.py  gibson_check.sh
src/cereal_killer/: __init__.py  config.py  context_manager.py  context_per_box.py  engine.py  findings.py  ingest_logic.py  knowledge_base.py  logging_config.py  main.py  observer.py  ui.py
src/mentor/: __init__.py
tests/: test_batch_embed.py  test_brain.py  test_commands.py  test_context_per_box.py  test_dashboard_and_stalker.py  test_dashboard_resolver.py  test_embed_cache.py  test_engine.py  test_kb_query.py  test_knowledge_base_transform.py  test_methodology.py  test_minifier.py  test_minify.py  test_observer.py  test_pedagogy.py  test_phase.py  test_redis_pool.py  test_response_cache.py  test_search.py  test_session.py  test_session_manager.py  test_startup.py  test_streaming.py  test_ui_layout.py  test_worker_lifecycle.py
(+73 files in other folders)
